--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jest": "^28.1.1"
   },
   "dependencies": {
-    "inquirer": "8.0.0"
+    "inquirer": "8.0.0",
+    "path": "^0.12.7"
   }
 }
